deploy/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assisted-bot
  labels:
    app: assisted-bot
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: assisted-bot
